--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
   "name": "lambda-dev",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "workspaces": [
+    "packages/*",
+    "packages/lambdas/*"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "start:local": "bash scripts/start-local.sh",
+    "stop:local": "bash scripts/stop-local.sh",
+    "sam:build": "sam build",
+    "sam:local": "sam local start-api --warm-containers EAGER",
+    "sam:invoke": "sam local invoke",
+    "cdk:deploy": "cd packages/infrastructure && npm run deploy",
+    "cdk:synth": "cd packages/infrastructure && npm run synth"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "aws-sam-cli": "^1.80.0",
+    "eslint": "^8.40.0",
+    "jest": "^29.5.0",
     "prettier": "^3.3.1",
+    "ts-node": "^10.9.1",
+    "turbo": "^2.5.0",
+    "typescript": "^5.0.0",
     "vite": "^5.1.6"
   }
 }
