--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "build:ts": "tsc --build",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "start:local": "bash scripts/start-local.sh",
@@ -16,18 +17,22 @@
     "sam:build": "sam build",
     "sam:local": "sam local start-api --warm-containers EAGER",
     "sam:invoke": "sam local invoke",
-    "cdk:deploy": "cd packages/infrastructure && npm run deploy",
-    "cdk:synth": "cd packages/infrastructure && npm run synth"
+    "cdk:deploy": "cd packages/infrastructure && pnpm run deploy",
+    "cdk:synth": "cd packages/infrastructure && pnpm run synth"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "aws-sam-cli": "^1.80.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "eslint": "^8.40.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-config-turbo": "^2.5.0",
     "jest": "^29.5.0",
     "prettier": "^3.3.1",
     "ts-node": "^10.9.1",
     "turbo": "^2.5.0",
-    "typescript": "^5.0.0",
+    "typescript": "^5.8.3",
     "vite": "^5.1.6"
-  }
+  },
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
