Subtask 1.2: Create Local Development Scripts - Added scripts for hot-reloading, Lambda deployment, and testing

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
+    "dev:watch": "bash scripts/dev-watch.sh",
     "build": "turbo run build",
     "build:ts": "tsc --build",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "start:local": "bash scripts/start-local.sh",
     "stop:local": "bash scripts/stop-local.sh",
+    "deploy:local": "bash scripts/deploy-local.sh",
+    "test:lambda": "bash scripts/test-lambda.sh",
     "sam:build": "sam build",
     "sam:local": "sam local start-api --warm-containers EAGER",
     "sam:invoke": "sam local invoke",
