Add verification documentation and script for local development environment

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stop:local": "bash scripts/stop-local.sh",
     "deploy:local": "bash scripts/deploy-local.sh",
     "test:lambda": "bash scripts/test-lambda.sh",
+    "verify:local": "bash scripts/verify-environment.sh",
     "sam:build": "sam build",
     "sam:local": "bash scripts/sam-local.sh",
     "sam:invoke": "bash scripts/sam-invoke.sh",
