--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Build output
 node_modules
 dist
 dist-ssr
 *.local
+
+# Turbo cache
+.turbo
+
+# Docker volumes
+docker/volume/
 
 # Editor directories and files
 .vscode/*
